--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ mas pretende ajudar inúmeras pessoas.</p>
   <section>
 <h2>Contato</h2>
 <p>Email: souzaeduardovinicius1@gmail.com</p>
-<p>LinkedIn: <a href="https://linkedin.com/in/seuperfil" target="_blank">seuperfil</a></p>
-<p>GitHub: <a href="https://github.com/seugithub" target="_blank">seugithub</a></p>
+<p>LinkedIn: <a href="https://linkedin.com/in/seuperfil" target="_blank">meuperfil</a></p>
+<p>GitHub: <a href="https://github.com/seugithub" target="_blank">meugithub</a></p>
 </section>
  
   <footer>
