--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 estou decidido a trabalhar com programação durante toda a minha vida proficional, tenho certa experiência com HTML e CSS, sou detalista e organizado,
 sempre procuro deixar tudo programado, para que eu sempre saiba o que devo fazer, o que é prioridade, e facilitar o trabalho de meus colegas, pois sei
 o quão importante é o trabalho cada um, como é importante esse preparo para uma empresa. Possuo um projeto pessoal que envolve o meu curso, ele ainda está em desenvolvimento, 
-mas pretende ajudar inúmeras pessoas.</p>
+mas pretende ajudar inúmeras pessoas. Sou uma pessoa muito criativa, costumo encontrar diversas soluções utilizando da minha criatividade, e também sou uma pessoa paciênte, 
+ajudando a todos que possuem duvidas e necessitam de ajuda.</p>
 </section>
  
   <section>
